--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,9 +8,13 @@ import discord from "@/assets/discordIcon.svg";
 <div class="relative">
   <div class="w-full h-full bg-[#081919] z-[-2] absolute top-0 left-0"></div>
   <div class="container max-w-7xl mx-auto text-white py-28 px-2 h-full">
-    <div class="flex flex-col md:flex-row justify-between">
-      <img src={logo.src} alt="logo" class="h-5 md:h-7" />
-      <div class="space-y-6">
+    <div class="flex flex-col md:flex-row justify-between scroll-animate">
+      <img
+        src={logo.src}
+        alt="logo"
+        class="h-5 md:h-7 scroll-animate-left delay-200"
+      />
+      <div class="space-y-6 scroll-animate-right delay-300">
         <p>
           Follow us for the lastest airdrops, updates, Web3 drama, spicy
           memes... and the occasional cat pic.
@@ -47,7 +51,7 @@ import discord from "@/assets/discordIcon.svg";
         </div>
       </div>
     </div>
-    <div class="text-left mt-28">
+    <div class="text-left mt-28 scroll-animate delay-400">
       © {new Date().getFullYear()} Purro. All rights reserved.
     </div>
   </div>
