--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import Button from "./Button";
 
   <div class="container mx-auto">
     <div class="flex flex-col items-center justify-center h-screen">
-      <div class="mb-10">
+      <div class="mb-10 scroll-animate">
         <div class="flex items-center justify-center gap-2">
           <h1
             class="text-[100px] md:text-[200px] font-bold text-[#02f1dc] leading-0 font-livvic"
@@ -27,7 +27,7 @@ import Button from "./Button";
           <img
             src={icon.src}
             alt="logo"
-            class="h-24 md:h-48 transform rotate-12"
+            class="h-24 md:h-48 transform rotate-12 scroll-animate-scale delay-300"
           />
         </div>
         <p class="text-white text-center text-2xl md:text-5xl font-medium">
@@ -35,7 +35,9 @@ import Button from "./Button";
         </p>
       </div>
 
-      <div class="absolute bottom-12 flex flex-col items-center">
+      <div
+        class="absolute bottom-12 flex flex-col items-center scroll-animate delay-500"
+      >
         <Button
           isToast={true}
           toastMessage="Coming soon"
