--- a/src/components/NFTSections.astro
+++ b/src/components/NFTSections.astro
@@ -16,22 +16,34 @@ import nft12 from "@/assets/nfts/12.png";
 <div class="min-h-screen relative bg-[#f1f7f6]">
   <div class="container max-w-7xl mx-auto py-28 px-2">
     <div class="w-1/2">
-      <h2 class="text-6xl mb-8 text-[#005b4a]">
+      <h2 class="text-6xl mb-8 text-[#005b4a] scroll-animate">
         Limited NFTs <br /> for Early Users
       </h2>
-      <div class="grid grid-cols-4 gap-4">
-        <img src={nft1.src} alt="nft1" class="w-full" />
-        <img src={nft2.src} alt="nft2" class="w-full" />
-        <img src={nft3.src} alt="nft3" class="w-full" />
-        <img src={nft4.src} alt="nft4" class="w-full" />
-        <img src={nft5.src} alt="nft5" class="w-full" />
-        <img src={nft6.src} alt="nft6" class="w-full" />
-        <img src={nft7.src} alt="nft7" class="w-full" />
-        <img src={nft8.src} alt="nft8" class="w-full" />
-        <img src={nft9.src} alt="nft9" class="w-full" />
-        <img src={nft10.src} alt="nft10" class="w-full" />
-        <img src={nft11.src} alt="nft11" class="w-full" />
-        <img src={nft12.src} alt="nft12" class="w-full" />
+      <div class="grid grid-cols-4 gap-4 scroll-animate delay-200">
+        <img src={nft1.src} alt="nft1" class="w-full scroll-animate-stagger" />
+        <img src={nft2.src} alt="nft2" class="w-full scroll-animate-stagger" />
+        <img src={nft3.src} alt="nft3" class="w-full scroll-animate-stagger" />
+        <img src={nft4.src} alt="nft4" class="w-full scroll-animate-stagger" />
+        <img src={nft5.src} alt="nft5" class="w-full scroll-animate-stagger" />
+        <img src={nft6.src} alt="nft6" class="w-full scroll-animate-stagger" />
+        <img src={nft7.src} alt="nft7" class="w-full scroll-animate-stagger" />
+        <img src={nft8.src} alt="nft8" class="w-full scroll-animate-stagger" />
+        <img src={nft9.src} alt="nft9" class="w-full scroll-animate-stagger" />
+        <img
+          src={nft10.src}
+          alt="nft10"
+          class="w-full scroll-animate-stagger"
+        />
+        <img
+          src={nft11.src}
+          alt="nft11"
+          class="w-full scroll-animate-stagger"
+        />
+        <img
+          src={nft12.src}
+          alt="nft12"
+          class="w-full scroll-animate-stagger"
+        />
       </div>
     </div>
   </div>
