--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -21,12 +21,12 @@ import wallet1 from "@/assets/wallet1.jpg";
     <img
       src={leftHand.src}
       alt="left hand"
-      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-55%]"
+      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-55%] scroll-animate-left delay-300"
     />
     <img
       src={rightHand.src}
       alt="right hand"
-      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-55%]"
+      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-55%] scroll-animate-right delay-300"
     />
   </div>
 
@@ -34,14 +34,14 @@ import wallet1 from "@/assets/wallet1.jpg";
     class="container max-w-7xl mx-auto text-white py-28 px-2 h-full flex justify-between"
   >
     <div class="flex flex-col justify-between h-full">
-      <div class="w-3/4">
+      <div class="w-3/4 scroll-animate-left">
         <h2 class="text-6xl mb-4">Trade smarter, not harder.</h2>
         <p class="text-lg">
           No switching tabs, no missing fees. <br />
           Just clean UX, and all yours assets in one view.
         </p>
       </div>
-      <div>
+      <div class="scroll-animate-left delay-200">
         <p class="text-lg">Build on</p>
         <div class="flex gap-6 h-10 items-end mt-4">
           <img src={hyperliquid.src} alt="Hyperliquid" class="h-full" />
@@ -49,7 +49,9 @@ import wallet1 from "@/assets/wallet1.jpg";
         </div>
       </div>
     </div>
-    <div class="flex flex-col gap-4 items-center justify-center">
+    <div
+      class="flex flex-col gap-4 items-center justify-center scroll-animate-right delay-100"
+    >
       <img src={wallet1.src} alt="wallet" />
     </div>
   </div>
