--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,12 +7,12 @@ import discord from "@/assets/discordIcon.svg";
 
 <div class="relative">
   <div class="w-full h-full bg-[#081919] z-[-2] absolute top-0 left-0"></div>
-  <div class="container max-w-7xl mx-auto text-white py-28 px-2 h-full">
+  <div class="container max-w-7xl mx-auto text-white py-28 px-4 h-full">
     <div class="flex flex-col md:flex-row justify-between scroll-animate">
       <img
         src={logo.src}
         alt="logo"
-        class="h-5 md:h-7 scroll-animate-left delay-200"
+        class="w-fit h-7 scroll-animate-left delay-200 mb-10 md:mb-0"
       />
       <div class="space-y-6 scroll-animate-right delay-300">
         <p>
