--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -21,12 +21,12 @@ import wallet1 from "@/assets/wallet1.jpg";
     <img
       src={leftHand.src}
       alt="left hand"
-      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-55%] scroll-animate-left delay-300"
+      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-40%] md:translate-y-[-55%] scroll-animate-left delay-300"
     />
     <img
       src={rightHand.src}
       alt="right hand"
-      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-55%] scroll-animate-right delay-300"
+      class="w-1/2 h-[80px] md:h-[150px] lg:h-[200px] translate-y-[-40%] md:translate-y-[-55%] scroll-animate-right delay-300"
     />
   </div>
 
