Refactor layout structure to implement scroll snapping across sections. Updated Header and Footer positioning, adjusted padding in multiple components for consistency, and added scroll snap styles in Layout for improved user experience.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,9 +3,12 @@ import background from "../assets/bg1.png";
 import icon from "../assets/purro-icon.png";
 import chrome from "../assets/chrome.png";
 import Button from "./Button";
+import Header from "./Header.astro";
 ---
 
 <div class="w-full h-screen overflow-hidden relative">
+  <Header />
+
   <div class="w-full h-full bg-[#081919] z-[-2] absolute top-0 left-0"></div>
 
   <img
