--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ const socials = [
 ---
 
 <header
-  class="fixed top-0 left-1/2 max-w-6xl transform -translate-x-1/2 w-full container mx-auto mt-6 px-2 z-50 header-animate"
+  class="absolute top-0 left-1/2 max-w-6xl transform -translate-x-1/2 w-full container mx-auto mt-6 px-2 z-50 header-animate"
 >
   <div
     class="p-3 flex justify-between items-center bg-[#b1cac4]/30 rounded-full"
