--- a/src/components/MeowFeatures.astro
+++ b/src/components/MeowFeatures.astro
@@ -4,7 +4,7 @@ import purroIcon from "@/assets/purro-icon.png";
 ---
 
 <div class="min-h-screen bg-[#f1f7f6] relative overflow-hidden">
-  <div class="container max-w-7xl mx-auto py-28 px-4">
+  <div class="container max-w-7xl mx-auto py-20 px-4">
     <div class="scroll-animate">
       <h2 class="md:text-5xl text-3xl text-center text-[#005b4a]">
         The purr-fect crypto companion <br /> for smart traders
@@ -15,7 +15,7 @@ import purroIcon from "@/assets/purro-icon.png";
     </div>
 
     <div class="scroll-animate delay-200">
-      <div class="flex gap-2 justify-between mt-10">
+      <div class="flex gap-2 justify-between mt-10 md:mt-0">
         <HoverCard client:load />
         <HoverCard client:load />
       </div>
