Update landing-page UI

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,43 +16,43 @@ import discord from "@/assets/discordIcon.svg";
       />
       <div class="space-y-6 scroll-animate-right delay-300">
         <p>
-          Follow us for the lastest airdrops, updates, Web3 drama, spicy
-          memes... and the occasional cat pic.
+          Follow us for the lastest airdrops, updates, Web3 drama,</br>
+          spicy memes... and the occasional cat pic.  
         </p>
         <div class="flex items-center">
           <a href="https://x.com/purro_xyz" target="_blank">
             <img
               src={twitter.src}
               alt="twitter"
-              class="h-5 md:h-7 pr-4 border-r border-white"
+              class="h-5 md:h-8 pr-7 border-r border-white"
             />
           </a>
           <a href="https://x.com/purro_xyz" target="_blank">
             <img
               src={telegram.src}
               alt="twitter"
-              class="h-5 md:h-7 px-4 border-r border-white"
+              class="h-5 md:h-8 px-7 border-r border-white"
             />
           </a>
           <a href="https://x.com/purro_xyz" target="_blank">
             <img
               src={discord.src}
               alt="twitter"
-              class="h-5 md:h-7 px-4 border-r border-white"
+              class="h-5 md:h-8 px-7 border-r border-white"
             />
           </a>
           <a
             href="https://docs.purro.xyz"
             target="_blank"
-            class="h-5 md:h-7 px-4"
+            class="px-7 text-lg flex items-center tracking-wide"
           >
-            DOCUMENTATION
+            DOCUMENT
           </a>
         </div>
       </div>
     </div>
     <div class="text-left mt-28 scroll-animate delay-400">
-      © {new Date().getFullYear()} Purro. All rights reserved.
+      Purro {new Date().getFullYear()}
     </div>
   </div>
 </div>
