--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,15 +25,15 @@ import Header from "./Header.astro";
           <h1
             class="text-[100px] md:text-[200px] font-bold text-[#02f1dc] leading-0 font-livvic"
           >
-            Purr
+            Purro
           </h1>
-          <img
+          <!-- <img
             src={icon.src}
             alt="logo"
             class="h-24 md:h-48 transform rotate-12 scroll-animate-scale delay-300"
-          />
+          /> -->
         </div>
-        <p class="text-white text-center text-2xl md:text-5xl font-medium">
+        <p class="text-white text-center text-2xl md:text-5xl font-medium mt-30 ">
           Built to chill - Ready to win
         </p>
       </div>
@@ -41,7 +41,7 @@ import Header from "./Header.astro";
       <div
         class="absolute bottom-12 flex flex-col items-center scroll-animate delay-500"
       >
-        <Button
+        <!-- <Button
           isToast={true}
           toastMessage="Coming soon"
           client:load
@@ -49,9 +49,9 @@ import Header from "./Header.astro";
         >
           <img src={chrome.src} alt="chrome" class="h-10" />
           <span>Download for Chrome</span>
-        </Button>
+        </Button> -->
         <p
-          class="max-w-2xl text-center text-sm md:text-md font-light mt-4 text-[#b1cac4]"
+          class="max-w-2xl text-center text-sm md:text-md font-light mb-[20%] mt-4 text-[#b1cac4]"
         >
           Built for real onchain grinders: smooth UX, unified assets. <br /> 40%
           fees come back to you.
