--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,14 +22,14 @@ const socials = [
 ---
 
 <header
-  class="absolute top-0 left-1/2 max-w-7xl transform -translate-x-1/2 w-full container mx-auto mt-6 px-2 z-50 header-animate"
+  class="absolute top-0 left-1/2 max-w-6xl transform -translate-x-1/2 w-full container mx-auto mt-6 px-2 z-50 header-animate"
 >
   <div
     class="p-3 flex justify-between items-center bg-[#b1cac4]/30 rounded-full"
   >
     <img src={logo.src} alt="logo" class="h-5 md:h-7 ml-3" />
     <div class="flex items-center gap-2">
-      <div class="items-center hidden md:flex">
+      <div class="items-center flex">
         {
           socials.map((social) => (
             <a
