--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,20 @@
 @import "tailwindcss";
 
 .font-livvic {
-    font-family: "Livvic", sans-serif;
+  font-family: "Livvic", sans-serif;
 }
 
 .font-figtree {
-    font-family: "Figtree", sans-serif;
+  font-family: "Figtree", sans-serif;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
