--- a/src/components/MeowFeatures.astro
+++ b/src/components/MeowFeatures.astro
@@ -2,11 +2,10 @@
 import HoverCard from "./HoverCard";
 import purroIcon from "@/assets/purro-icon.png";
 import Body from "@/assets/Body.png"
-import { gsap } from "gsap";
 ---
 
 <div class="min-h-screen bg-gradient-to-b from-[#021919] via-[#163737] to-[#005b4a] relative overflow-hidden">
-  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row ">
+  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden">
     <div class="w-full md:w-1/2 ">
       <div class="scroll-animate">
         <h2 class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap">
@@ -33,19 +32,17 @@ import { gsap } from "gsap";
       </div>
     </div>
 
-    <div class="w-full md:w-1/2 
-    relative flex justify-center items-end md:items-center mt-30 md:mt-0">
-      <img 
-        id="purro-body"
-        src={Body.src} 
-        alt="Purro Body" 
-        class="w-[260px] lg:w-[350px] xl:w-[420px] 
-        [transform:scaleX(-1)] scale-150 overflow-hidden" 
-      />
-      <script>
-        import { initPurroAnimation } from "../scripts/purroAnimation";
-        initPurroAnimation();
-      </script>
+    <div class="w-full md:w-1/2 flex justify-center items-end mt-30 md:mt-15">
+      <div class="relative w-full max-w-[14rem] md:max-w-[14rem] lg:max-w-[22rem] xl:max-w-[28rem]">
+        <img 
+          id="purro-body"
+          src={Body.src} 
+          alt="Purro Body" 
+          class="w-full h-auto max-w-full
+          [transform:scaleX(-1)] 
+          animate-bounce-slow" 
+        />
+      </div>
     </div>
   </div>
 </div>
