--- a/src/components/NFTSections.astro
+++ b/src/components/NFTSections.astro
@@ -16,7 +16,7 @@ import NFTCarousel from "./NFTCarousel";
 ---
 
 <div class="min-h-screen relative bg-gradient-to-b from-[#033b32] via-[#022a22] to-[#021919]">
-  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col lg:flex-row items-center md:items-start gap-8">
+  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col lg:flex-row items-center justify-center gap-8 min-h-screen">
     <div class="w-full lg:w-1/2 flex flex-col items-center lg:items-start">
       <h2 class="text-3xl md:text-5xl text-center lg:text-left text-white whitespace-nowrap">
         Limited NFT Collection <br /> for Early Users
