--- a/src/components/ScreenFeatures.astro
+++ b/src/components/ScreenFeatures.astro
@@ -6,17 +6,11 @@ import sui from "@/assets/sui-logo-white.png";
 import wallet1 from "@/assets/wallet1.jpg";
 ---
 
-<div class="h-screen relative">
-  <div class="w-full h-full bg-gradient-to-b from-[#005b4a] via-[#03503c] to-[#033b32] z-[-2] absolute top-0 left-0"></div>
-  <div
-    class="absolute w-full md:w-[70%] h-full flex justify-between top-0 left-0 right-0 mx-auto z-20"
-  >
-  </div>
-
-  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row">
-    <div class="w-full md:w-1/2 flex flex-col justify-between ">
-      <div class="scroll-animate-left">
-        <h2 class="text-4xl md:text-5xl text-center md:text-left text-white">
+<div class="min-h-screen bg-gradient-to-b from-[#005b4a] via-[#03503c] to-[#033b32] relative overflow-hidden">
+  <div class="container max-w-7xl mx-auto py-20 px-4 flex flex-col md:flex-row items-center min-h-screen overflow-hidden">
+    <div class="w-full md:w-1/2 flex flex-col justify-center">
+      <div class="scroll-animate-left mb-15 md:mb-90">
+        <h2 class="text-3xl md:text-5xl text-center md:text-left text-white whitespace-nowrap">
           Trade smarter, not harder.
         </h2>
         <p class="mt-2 text-sm md:text-lg text-center md:text-left text-white">
@@ -25,18 +19,18 @@ import wallet1 from "@/assets/wallet1.jpg";
         </p>
       </div>
       
-      <div class="scroll-animate-left mt-10 delay-200">
+      <div class="scroll-animate-left delay-200 lg:mt-25 mt-0 md:mb-15">
         <p class="text-base md:text-lg text-center md:text-left text-white">Build on</p>
-        <div class="flex gap-4 md:gap-6 h-10 items-end mt-4 justify-center md:justify-start">
+        <div class="flex gap-4 md:gap-6 h-6 md:h-8 items-end mt-4 justify-center md:justify-start">
           <img src={hyperliquid.src} alt="Hyperliquid" class="h-full" />
           <img src={sui.src} alt="Sui" class="h-full" />
         </div>
       </div>
     </div>
 
-    <div class="w-full md:w-1/2 relative flex md:justify-end justify-center items-center mt-10 md:mt-15">
+    <div class="w-full md:w-1/2 flex justify-center md:justify-end items-center mt-10">
       <div class="scroll-animate-right delay-100">
-        <img src={wallet1.src} alt="wallet" class="w-full md:w-[80%] lg:w-[90%] xl:w-full object-contain" />
+        <img src={wallet1.src} alt="wallet" class="w-full md:w-[75%] lg:w-[90%] xl:w-full object-contain" />
       </div>
     </div>
   </div>
