--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,13 +8,25 @@
   font-family: "Figtree", sans-serif;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+@keyframes bounce-slow {
+  0%,
+  100% {
+    transform: translateY(0px) scaleX(-1) scale(1.5);
+  }
+  50% {
+    transform: translateY(-20px) scaleX(-1) scale(1.5);
+  }
+}
+
+.animate-bounce-slow {
+  animation: bounce-slow 3s ease-in-out infinite;
 }
