Change Desc Position

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -30,7 +30,7 @@ import Header from "./Header.astro";
         </p>
       </div>
 
-      <div class="absolute bottom-20 md:bottom-6 flex flex-col items-center scroll-animate delay-500">
+      <div class="absolute bottom-8 flex flex-col items-center scroll-animate delay-500">
         <div class="scroll-animate delay-300">
           <Button
             isToast={true}
@@ -43,7 +43,7 @@ import Header from "./Header.astro";
           </Button>
         </div>
 
-        <p class="max-w-2xl text-center text-sm md:text-md font-light mt-5 md:mt-20 text-[#b1cac4]">
+        <p class="max-w-2xl text-center text-sm md:text-md font-light mt-5 text-[#b1cac4]">
           Built for real onchain grinders: smooth UX, unified assets. <br />
           40% fees come back to you.
         </p>
