--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,7 @@ import telegram from "@/assets/teleIcon.svg";
 import discord from "@/assets/discordIcon.svg";
 ---
 
-<div class="relative">
-  <div class="w-full h-full bg-[#081919] z-[-2] absolute top-0 left-0"></div>
+<div class="relative bg-gradient-to-b from-[#021919] to-[#081919]">
   <div class="container max-w-7xl mx-auto text-white py-20 px-4 h-full">
     <div class="flex flex-col md:flex-row justify-between scroll-animate">
       <img
