Add OGL library and update Header and Hero components for improved visuals

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ const socials = [
   <div
     class="p-3 flex justify-between items-center bg-[#b1cac4]/30 rounded-full"
   >
-    <img src={logo.src} alt="logo" class="h-5 md:h-7 ml-3" />
+    <img src="/purro-icon-dark.png" alt="logo" class="h-10 rounded-full" />
     <div class="flex items-center gap-2">
       <div class="items-center flex">
         {
