Update content for Hovercard

--- a/src/components/MeowFeatures.astro
+++ b/src/components/MeowFeatures.astro
@@ -16,16 +16,16 @@ import purroIcon from "@/assets/purro-icon.png";
 
     <div class="scroll-animate delay-200">
       <div class="flex gap-2 justify-between mt-10 md:mt-0">
-        <HoverCard client:load />
-        <HoverCard client:load />
+        <HoverCard content="One wallet for Hyperliquid & HyperEVM" client:load />
+        <HoverCard content="Get 40% of your swap fees back in Purro tokens" client:load />
       </div>
       <div class="flex gap-2 justify-between mt-10">
-        <HoverCard client:load />
-        <HoverCard client:load />
+        <HoverCard content="Swap, stake, bridge in one place" client:load />
+        <HoverCard content="Send with Hyperliquid @names not addresses" client:load />
       </div>
       <div class="flex gap-2 justify-between mt-10">
-        <HoverCard client:load />
-        <HoverCard client:load />
+        <HoverCard content="Dev-ready SDKs for Hyperliquid apps" client:load />
+        <HoverCard content="Support Multi-chain" client:load />
       </div>
     </div>
 
